create test for AppArmor::Parser::updateFromString()

--- a/test/e2e/CMakeLists.txt
+++ b/test/e2e/CMakeLists.txt
@@ -10,6 +10,7 @@ set(TEST_SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/src/add_function.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/src/edit_function.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/src/file_mode.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/parser.cc
 )
 
 #### Check that gtest is installed ####
