add tests for AbstractionRule

--- a/test/e2e/CMakeLists.txt
+++ b/test/e2e/CMakeLists.txt
@@ -11,6 +11,7 @@ set(TEST_SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/src/edit_function.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/src/file_mode.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/src/parser.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/tree/abstraction_rule_test.cc
 )
 
 #### Check that gtest is installed ####
