--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,10 +164,12 @@ set(PKG_CONFIG_FILE_OUT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/libappanvil.pc")
 configure_file("${PKG_CONFIG_FILE_IN}" "${PKG_CONFIG_FILE_OUT}" @ONLY) 
 
 # Create target to install library
-install(TARGETS ${LIBRARY_NAME} DESTINATION lib/)
-install(FILES ${OUTPUT_HEADERS} DESTINATION include/${INSTALL_NAME})
-install(FILES ${OUTPUT_TREE_HEADERS} DESTINATION include/${INSTALL_NAME}/tree/)
-install(FILES ${PKG_CONFIG_FILE_OUT} DESTINATION lib/pkgconfig)
+if(NOT DEFINED DISABLE_LIBAPPANVIL_INSTALL OR DISABLE_LIBAPPANVIL_INSTALL STREQUAL "false")
+  install(TARGETS ${LIBRARY_NAME} DESTINATION lib/)
+  install(FILES ${OUTPUT_HEADERS} DESTINATION include/${INSTALL_NAME})
+  install(FILES ${OUTPUT_TREE_HEADERS} DESTINATION include/${INSTALL_NAME}/tree/)
+  install(FILES ${PKG_CONFIG_FILE_OUT} DESTINATION lib/pkgconfig)
+endif()
 
 # Create uninstall target
 # Copied from: https://gitlab.kitware.com/cmake/community/-/wikis/FAQ#can-i-do-make-uninstall-with-cmake
