--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.19)
 
-project(unit-test C CXX)
+project(libappanvil_test C CXX)
 
 set(TEST_SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cc
